--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <title>Tim's site</title>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Noto+Serif">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="index.js"></script>
 </head>
 <body>
-    Hi! 
+    <div id="name">Timafei "Tim" Hushchyn</div>
+    <div id="ipa">/tɪmɐfej/ or /tɪm/</div>
+    <marquee id="time"></marquee>
 </body>
 </html>
