--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div id="name">Timafei "Tim" Hushchyn</div>
     <div id="ipa">/tɪmɐfej/ or /tɪm/</div>
+    <a id="email" href="mailto:thushchyn@umass.edu">email</a>
+    <p>Hi! I'm a student at UMass Amherst studying computer science and linguistics. My interests include topics such as algorithms, human-computer interaction, and phonology. Fluent in English and Russian. My favorite phoneme is ʔ (the glottal stop).</p>
     <marquee id="time"></marquee>
 </body>
 </html>
