--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="name">Timafei "Tim" Hushchyn</div>
     <div id="ipa">/tɪmɐfej/ or /tɪm/</div>
-    <a id="email" href="mailto:thushchyn@umass.edu">email</a>
+    <a id="link" href="mailto:thushchyn@umass.edu">email</a>  <a id="link" href="https://www.linkedin.com/in/timafei/">linkedin</a> <a id="link" href="https://github.com/Tim70">github</a> 
     <p>Hi! I'm a student at UMass Amherst studying computer science and linguistics. My interests include topics such as algorithms, human-computer interaction, and phonology. Fluent in English and Russian. My favorite phoneme is ʔ (the glottal stop).</p>
     <marquee id="time"></marquee>
 </body>
