--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-You seem lost.
+You seem lost. Go <a class="link" href="/">home.</a>
+<marquee id="time"></marquee>
 </body>
 </html>
