faster marquee load

--- a/404.html
+++ b/404.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 You seem lost. Go <a class="link" href="/">home.</a>
-<marquee id="time"></marquee>
+<marquee id="time">.</marquee>
 </body>
 </html>
