--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-You seem lost. Go <a class="link" href="/">home.</a>
+You seem lost. Go <a class="link" href="/">home.</a> But while you're here, did you know that the background color for this website is the average color of the <a class="link" href="https://en.wikipedia.org/wiki/Cosmic_latte">universe</a>?
 <marquee id="time">.</marquee>
 </body>
 </html>
