404 with 2 facts now!

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-You seem lost. Go <a class="link" href="/">home.</a> But while you're here, did you know that the background color for this website is the average color of the <a class="link" href="https://en.wikipedia.org/wiki/Cosmic_latte">universe</a>?
+You seem lost. Go <a class="link" href="/">home.</a> But while you're here, did you know that the background color for this website is the average color of the <a class="link" href="https://en.wikipedia.org/wiki/Cosmic_latte">universe</a>? And the primary text color, <a class="link" href="https://en.wikipedia.org/wiki/Cosmic_latte">British racing green</a>, is a shade of green that represents British motorsport and their gratitude to Ireland.
 <marquee id="time">.</marquee>
 </body>
 </html>
