--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <div id="name">Timafei "Tim" Hushchyn</div>
+    <div id="name"><a href="/404.html" id="t">T</a>imafei "Tim" Hushchyn</div>
     <div id="ipa">/tɪmɐfej/ or /tɪm/</div>
     <a class="link" href="mailto:thushchyn@umass.edu">email</a>  <a class="link" href="https://www.linkedin.com/in/timafei/">linkedin</a> <a class="link" href="https://github.com/Tim70">github</a> 
     <p>Hi! I'm a student at UMass Amherst studying computer science and linguistics. My interests include topics such as algorithms, human-computer interaction, and phonology. Fluent in English and Russian. My favorite phoneme is ʔ (the glottal stop).</p>
