--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div id="name"><a href="/404.html" id="t">T</a>imafei "Tim" Hushchyn</div>
     <div id="ipa">/tɪmɐfej/ or /tɪm/</div>
     <a class="link" href="mailto:thushchyn@umass.edu">email</a>  <a class="link" href="https://www.linkedin.com/in/timafei/">linkedin</a> <a class="link" href="https://github.com/Tim70">github</a> 
-    <p>Hi! I'm a student at UMass Amherst studying computer science and linguistics. My interests include topics such as algorithms, human-computer interaction, and phonology. Fluent in English and Russian. My favorite phoneme is ʔ (the glottal stop).</p>
+    <p>Hi! I'm a student at UMass Amherst studying computer science and linguistics. My academic interests include topics such as algorithms, human-computer interaction, and phonology. I was previously an undergraduate research assistant at the <a class="link" href="https://blogs.umass.edu/jkingstn/phonetics-laboratory/">UMass Amherst Phonetics Lab</a>. Fluent in English and Russian. My favorite phoneme is ʔ (the glottal stop).</p>
+    <p>On the personal side my interests include a wide variety of things such as tennis, travel, and beverages of all sorts. I used to play a lot of video games, but since starting college I have not found much time for this hobby (especially post-pandemic). I listen to most genres of music, some of my favorite being jazz, hip-hop, and rock.</p>
     <marquee id="time">.</marquee>
 </body>
 </html>
