meta descrption created

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
           href="https://fonts.googleapis.com/css2?family=Noto+Serif">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="index.js"></script>
+    <meta
+  name="description"
+  content="Timafei Hushchyn is a computer science and linguistics student at the Universtiy of Massachussets Amherst">
 </head>
 <body>
     <div id="name"><a href="/404.html" id="t">T</a>imafei "Tim" Hushchyn</div>
