--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta
   name="description"
   content="Timafei Hushchyn is a computer science and linguistics student at the Universtiy of Massachussets Amherst">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
     <div id="name"><a href="/404.html" id="t">T</a>imafei "Tim" Hushchyn</div>
