--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <script src="index.js"></script>
     <meta
   name="description"
-  content="Timafei Hushchyn is a computer science and linguistics student at the Universtiy of Massachussets Amherst">
+  content="Timafei Hushchyn is a computer science master's student at the Universtiy of Massachussets Amherst">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <div id="name"><a href="/404.html" id="t">T</a>imafei "Tim" Hushchyn</div>
-    <div id="ipa">/tɪmɐfej/ or /tɪm/</div>
-    <a class="link" href="mailto:thushchyn@umass.edu">email</a>  <a class="link" href="https://www.linkedin.com/in/timafei/">linkedin</a> <a class="link" href="https://github.com/Tim70">github</a> 
+    <div class="profile-container">
+      <div class="profile-text">
+        <div id="name"><a href="/404.html" id="t">T</a>imafei "Tim" Hushchyn</div>
+        <div id="ipa">/tɪmɐfej/ or /tɪm/</div>
+        <a class="link" href="mailto:thushchyn@umass.edu">email</a>  <a class="link" href="https://www.linkedin.com/in/timafei/">linkedin</a> <a class="link" href="https://github.com/Tim70">github</a> 
+        <img src="photo.png" alt="Timafei Hushchyn" class="profile-photo" />
+      </div>
+    </div>
     <p>Hi! I'm a master's student at UMass Amherst studying computer science. Previously, I was an undegraduate studying computer science and linguistics. My academic interests currently include topics such as algorithms, human-computer interaction (particularly social computing), and reverse engineering/vulnerability research. I was previously an undergraduate research assistant at the <a class="link" href="https://blogs.umass.edu/jkingstn/phonetics-laboratory/">UMass Amherst Phonetics Lab</a>. Fluent in English and Russian. My favorite phoneme is ʔ (the glottal stop).</p>
     <p>On the personal side my interests include a wide variety of things such as tennis, travel, and beverages of all sorts (such as <a class="link" id="bev" href=""></a>). Recently, I have become really interested in films (expect a blog post about it soon!). I listen to most genres of music, some of my favorite being jazz, hip-hop, and rock.</p>
     <div id="umaring"></div>
