fixed photo url

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="name"><a href="/404.html" id="t">T</a>imafei "Tim" Hushchyn</div>
         <div id="ipa">/tɪmɐfej/ or /tɪm/</div>
         <a class="link" href="mailto:thushchyn@umass.edu">email</a>  <a class="link" href="https://www.linkedin.com/in/timafei/">linkedin</a> <a class="link" href="https://github.com/Tim70">github</a> 
-        <img src="photo.png" alt="Timafei Hushchyn" class="profile-photo" />
+        <img src="photo.jpg" alt="Timafei Hushchyn" class="profile-photo" />
       </div>
     </div>
     <p>Hi! I'm a master's student at UMass Amherst studying computer science. Previously, I was an undegraduate studying computer science and linguistics. My academic interests currently include topics such as algorithms, human-computer interaction (particularly social computing), and reverse engineering/vulnerability research. I was previously an undergraduate research assistant at the <a class="link" href="https://blogs.umass.edu/jkingstn/phonetics-laboratory/">UMass Amherst Phonetics Lab</a>. Fluent in English and Russian. My favorite phoneme is ʔ (the glottal stop).</p>
