--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
         <div id="ipa">/tɪmɐfej/ or /tɪm/</div>
         <a class="link" href="mailto:thushchyn@umass.edu">email</a>  <a class="link" href="https://www.linkedin.com/in/timafei/">linkedin</a> <a class="link" href="https://github.com/Tim70">github</a> 
       </div>
-      <img src="photo.jpg" alt="Timafei Hushchyn" class="profile-photo"/>
+      <div class="profile-photo-wrapper">
+        <img src="photo.jpg" class="photo default" alt="Profile photo" />
+        <img src="secretphoto.jpg" class="photo secret" alt="Secret photo" />
+      </div>
     </div>
-    <p>Hi! I'm a master's student at UMass Amherst studying computer science. Previously, I was an undegraduate studying computer science and linguistics. My academic interests currently include topics such as algorithms, human-computer interaction (particularly social computing), and reverse engineering/vulnerability research. I was previously an undergraduate research assistant at the <a class="link" href="https://blogs.umass.edu/jkingstn/phonetics-laboratory/">UMass Amherst Phonetics Lab</a>. Fluent in English and Russian. My favorite phoneme is ʔ (the glottal stop).</p>
+    <p>Hi! I'm a master's student at UMass Amherst studying computer science. Previously, I was an undegraduate studying computer science and linguistics. My academic interests currently center around algorithms, particularly those with distributed systems or social computing applications. I also do some work on how people use social media at the <a class="link" href="https://publicinfrastructure.org/">Initative for Digital Public Infrastructure</a>. I was previously an undergraduate research assistant at the <a class="link" href="https://blogs.umass.edu/jkingstn/phonetics-laboratory/">UMass Amherst Phonetics Lab</a>. Fluent in English and Russian. My favorite phoneme is ʔ (the glottal stop).</p>
     <p>On the personal side my interests include a wide variety of things such as tennis, travel, and beverages of all sorts (such as <a class="link" id="bev" href=""></a>). Recently, I have become really interested in films (expect a blog post about it soon!). I listen to most genres of music, some of my favorite being jazz, hip-hop, and rock.</p>
     <div id="umaring"></div>
     <script id="umaring_js" src="https://umaring.mkr.cx/ring.js?id=timafei" onload="createObserver()"></script>
